fix font bug on safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ html, body {
 	min-height: 100%;
 	height: 100%;
 	font-family: Swiss;
-	font-weight: lighter;
+	font-weight: 100;
 	color: white;
 }
 
